[package]
name = "map-of-indexes"
version = "0.1.4-dev"
edition = "2021"
# publish = false # Comment this line out before publishing
authors = ["Kraktus"]
description = "A compact key-value map for unique but not dense indexes"
repository = "https://github.com/kraktus/map-of-indexes"
license = "AGPL-3.0+"
readme = "README.md"
keywords = ["vec", "indexes", "map"]
categories = ["data-structures", "compression", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"